# veriti-voice

./: .env.example  .gitignore  README.md  geminiflash.md  package-lock.json  package.json  vercel.json  veriti-voice-architecture-decisions.md  veriti-voice-implementation-tickets.md  veriti-voice-poc-backlog.md  veriti-voice-prd.md  veriti-voice-strategic-plan.md
apps/api/: .env.example  Dockerfile  README.md  nixpacks.toml  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/http/: demo.py  health.py  twilio.py
apps/api/app/api/websocket/: __init__.py  call_lab.py  media.py
apps/api/app/core/: config.py  store.py
apps/api/app/domain/calls/: __init__.py  session_manager.py  state.py
apps/api/app/domain/demo/: policy.py
apps/api/app/domain/voice/: __init__.py  audio.py  factory.py  session.py
apps/api/app/integrations/cliniko/: __init__.py  adapter.py  factory.py  live.py  stub.py
apps/api/app/integrations/gemini/: adapter.py  live.py
apps/api/app/integrations/twilio/: __init__.py  media.py  twiml.py
apps/api/app/schemas/: calls.py  cliniko.py  demo.py
apps/api/data/: dev_store.json
apps/api/tests/: test_call_state.py  test_demo_policy.py  test_gemini_live_wire.py  test_live_cliniko.py  test_session_manager.py  test_stub_cliniko.py  test_twilio_media.py  test_voice_audio.py
apps/api/veriti_voice_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: call-lab-build-plan.md  implementation-log.md  poc-readiness-checklist.md  setup-contract.md  testing-ui-ux-audit.md
scripts/: debug-media-session.mjs  probe-call-lab.mjs  (+1 more)
(+45 files in other folders)
