[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "veriti-voice-api"
version = "0.1.0"
description = "FastAPI backend for Veriti Voice Overflow"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "uvicorn>=0.30,<1.0",
  "websockets>=15.0,<16.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
